# notifier

./: .gitignore  .socraticodecontextartifacts.json  AGENTS.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.github/workflows/: sdk-staleness.yml
alembic/versions/: 24cb1d802502_initial_schema.py
clients/python/: CHANGELOG.md  README.md  pyproject.toml
clients/python/scripts/: regen.sh
clients/python/tests/: conftest.py  test_apprise_api.py  test_apprise_integration.py  test_channels_api.py  test_channels_integration.py  test_client.py  test_errors.py  test_idempotency.py  test_logging.py  test_preview_api.py  test_retry_after.py  test_retry_config.py  test_retry_transport.py  test_schema_fixtures.py  test_smoke.py  test_smoke_integration.py  test_templates_api.py  test_types_surface.py
deploy/: notifier.service
docs/: COMMANDS.md  DEPLOYMENT.md  SKILLS.md
docs/plans/: 2026-04-30-python-sdk.md  2026-05-01-sdk-typed-returns-and-wrappers.md  2026-05-09-html-diff-coloring-design.md
scripts/: dump_openapi.py  seed_tenant.py
skills/brainstorming/: SKILL.md
skills/reviewing-code-claude/scripts/: gather-context.sh
skills/shipping-work-claude/scripts/: pre-ship.sh
skills/shipping-work-python-fastapi/: SKILL.md
skills/shipping-work-python-fastapi/scripts/: pre-ship.sh
skills/using-git-worktrees/: SKILL.md
src/: __init__.py
src/api/: deps.py  main.py
src/api/routes/: apprise_plugins.py  channels.py  dispatch.py  health.py  preview.py  templates.py
src/core/: crypto.py  database.py  utils.py
tests/: conftest.py  test_dump_openapi.py  test_smoke.py
tests/api/: test_deps.py  test_ulid_types.py
tests/core/: test_apprise_builder.py  test_database.py  test_dispatch_constants.py  test_dispatcher.py  test_html_render.py  test_utils.py
(+32 files in other folders)
