[project]
name = "notifier"
version = "0.1.0"
description = "Multi-tenant notifications service: Apprise-backed dispatcher with Jinja2 templates and JSON-Schema-validated variable bags."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1",
    "python-json-logger>=4.0.0,<5",
    "uvicorn>=0.34.0,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30.0,<1",
    "alembic>=1.15.0,<2",
    "python-ulid>=3.0.0,<4",
    "procrastinate[psycopg]>=3.0,<4",
    "httpx>=0.28.0,<1",
    "jinja2>=3.1.6,<4",
    "jsonschema>=4.21.0,<5",
    "apprise>=1.9.9",
    "cryptography>=46.0.6",
    "mistune>=3.0,<4",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1,<5",
    "pre-commit>=4.5.1,<5",
    "pytest>=8.0,<9",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=6.0,<7",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration' --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: marks tests that hit live external services; excluded by default (run with -m integration)",
]
filterwarnings = [
    "error::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["skills-vendor/", "alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
